--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@firebase/auth": "^1.7.6",
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.0.1",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "google-libphonenumber": "^3.2.34",
@@ -35,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.9",
     "zod": "^3.22.4"
   },
   "devDependencies": {
