--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "google-libphonenumber": "^3.2.34",
+    "postcss": "^8.4.41",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
