--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@firebase/app": "^0.10.8",
     "@firebase/auth": "^1.7.6",
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
