--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^10.6.0",
     "google-libphonenumber": "^3.2.34",
     "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
