--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/google-libphonenumber": "^7.4.30",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-query": "^1.2.9",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
