--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
